Fix DAVE-513 (#216)
* change Methode to calculate gesamt

* filter Zaehlungen before searching last three

* inline stream api